# crabs

./: .gitignore  Cargo.toml  LICENSE  README.md  prek.toml
.github/workflows/: ci.yml  publish.yml
crates/better-auth-poem/: Cargo.toml  README.md
crates/better-auth-poem/src/: convert.rs  extractor.rs  lib.rs  route.rs
crates/better-auth-poem/tests/: extractor.rs  openapi.rs  routes.rs
crates/better-auth-poem/tests/common/: mod.rs
crates/vercel-poem/: Cargo.toml  README.md
crates/vercel-poem/src/: lib.rs
crates/vercel-poem/tests/: conversion.rs
examples/openapi-hello-world/: Cargo.toml  vercel.json
examples/openapi-hello-world/api/: index.rs
examples/openapi-hello-world/src/: lib.rs
examples/openapi-hello-world/tests/: api.rs
examples/sqlx-custom-entities/: Cargo.toml
examples/sqlx-custom-entities/migrations/: 001_init.sql
examples/sqlx-custom-entities/src/: entities.rs  lib.rs  main.rs
examples/sqlx-custom-entities/tests/: e2e.rs
