[package]
name = "better-auth-poem"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Poem framework integration for better-auth-rs"
readme = "README.md"
keywords = ["better-auth", "poem", "authentication", "session", "auth"]
categories = ["authentication", "web-programming"]

[dependencies]
poem = { workspace = true }
better-auth = { workspace = true }
better-auth-core = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
poem = { workspace = true, features = ["test"] }
poem-openapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
