[package]
name = "vercel-poem"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Run Poem applications on the Vercel Rust runtime"
keywords = ["vercel", "poem", "serverless", "runtime", "http"]
categories = ["web-programming::http-server", "web-programming"]

[dependencies]
poem = { workspace = true }
vercel_runtime = { workspace = true }
hyper = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
sync_wrapper = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
http-body-util = { workspace = true }
