[package]
name = "openapi-hello-world"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "index"
path = "api/index.rs"

[lib]
path = "src/lib.rs"

[dependencies]
vercel-poem = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
tokio = { workspace = true }
serde_json = { workspace = true }
