[package]
name = "sqlx-custom-entities"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
better-auth = { workspace = true, features = ["sqlx-postgres", "derive"] }
better-auth-core = { workspace = true, features = ["derive", "sqlx-postgres"] }
better-auth-poem = { path = "../../crates/better-auth-poem" }
vercel-poem = { workspace = true }
poem = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
poem = { workspace = true, features = ["test"] }
tokio = { workspace = true }
serde_json = { workspace = true }
